# NeuralClassifier

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
NeuralNetwork/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Synapse.cpp  Synapse.h
